...
            app:bt_active="true"
            app:bt_colorActive="@color/white"
            app:bt_colorInactive="@color/primaryColor"
            app:bt_icon="@drawable/ic_movies"
            app:bt_shape="@drawable/bubble_navigation_bg"
            app:bt_title="Movies"
            app:layout_constraintEnd_toStartOf="@+id/btTvShows"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/bottomNavigationContainer" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/btTvShows"
...
            app:bt_active="false"
            app:bt_colorActive="@color/white"
            app:bt_colorInactive="@color/primaryColor"
            app:bt_icon="@drawable/ic_tv_shows"
            app:bt_shape="@drawable/bubble_navigation_bg"
            app:bt_title="Tv Shows"
            app:layout_constraintEnd_toStartOf="@+id/btFavorite"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btMovies"
            app:layout_constraintTop_toTopOf="@id/bottomNavigationContainer" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/btFavorite"
...
