...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:background="@color/secondaryColor"
    tools:context=".ui.favorite.movies.FavoriteMoviesFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_favorite_movies"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_card_list" />

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/menu"
...
